# quant-factory

./: .gitignore  CLAUDE.md  CLAUDE_CODE_BRIEF.md  PHASE2_KICKOFF.md  README.md  RESEARCH_PROTOCOL.md  TRADING_SYSTEM_CHARTER.md  pyproject.toml
alpha/strategies/: funding_carry.py  funding_carry_xs.py  ma_cross.py  quasimodo.py  trend.py
data/: prepare.py  prepare_xs.py  store.py
data/ingestion/: crypto.py
engine/: backtest.py  data.py  metrics.py  reality.py  strategy.py  validation.py
portfolio/: combine.py  lifecycle.py
scripts/: fetch_data.py  fetch_spot.py  fetch_xs_spot.py  fetch_xs_universe.py  run_demo.py  run_funding_carry.py  run_portfolio.py  vet_carry_basket.py  vet_funding_carry_xs.py  vet_quasimodo.py  vet_trend.py
tests/: test_data.py  test_funding.py  test_funding_carry_xs.py  test_lifecycle.py  test_no_lookahead.py  test_portfolio.py  test_quasimodo.py  test_trend.py
