[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-factory"
version = "0.1.0"
description = "Nhà máy nghiên cứu & thử nghiệm bot trader có edge thật (Crypto + FX)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "ccxt>=4.0",
    "pyarrow>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.setuptools]
packages = ["engine", "alpha", "alpha.strategies", "portfolio", "data", "data.ingestion"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
